# pyRT_DISORT

./: .gitattributes  CITATION.cff  setup.cfg  setup.py
.github/workflows/: ci.yaml
anc/mars_dust/: asymmetry_parameter.npy  extinction_cross_section.npy  scattering_cross_section.npy
builddocs/: conf.py  index.rst
builddocs/examples/: index.rst  plot_phase_function_decomposition.ipynb  plot_phase_function_decomposition.py  plot_phase_function_decomposition.py.md5  plot_phase_function_decomposition.rst  plot_phase_function_decomposition_codeobj.pickle  plot_sky_image.ipynb  plot_sky_image.py  plot_sky_image.py.md5  sg_execution_times.rst
builddocs/rst/: about-pyRT_DISORT.rst  api-reference.rst  release-notes.rst
docs/: .buildinfo  genindex.html  index.html  notes.html  objects.inv  search.html  searchindex.js
docs/.doctrees/: environment.pickle  index.doctree  notes.doctree
docs/_modules/: index.html
docs/_sources/: index.rst.txt  notes.rst.txt
docs/examples/: index.html  plot_phase_function_decomposition.html  plot_sky_image.html  sg_execution_times.html
docs/rst/: about-DISORT.html  about-pyRT_DISORT.html  api-reference.html  installation.html  release-notes.html
examples/: README.rst  plot_phase_function_decomposition.py
examples/phase_function/: README.rst  plot_fit_asymmetry_parameter.py
examples/retrieval/: README.rst
examples/unsorted/: README.rst  (+1 more)
pyrt/: __init__.py  angles.py  atmosphere.py  eos.py  fsp.py  grid.py  junk.py  observation.py  phase_function.py  rayleigh.py  scratch.py  spectral.py  vertical_profile.py
(+130 files in other folders)
