[metadata]
name = pyRT_DISORT
version = 0.1.0
author = kconnour
home_page = https://github.com/kconnour/pyRT_DISORT
description = Make radiative transfer more accessible to the yearning masses

[options]
include_package_data = True
python_requires = >= 3.9
packages = pyrt
install_requires =
   numba
   numpy
   scipy

[options.extras_require]
test =
   pytest
docs =
   Sphinx
   matplotlib
   pydata-sphinx-theme
   sphinx-gallery

[options.package_data]
* = ../*.so